Use grid layout to prevent sidebar overlap

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,12 +1,60 @@
+.total {
+  display: grid;
+  grid-template-columns: 355px minmax(0, 1fr);
+  column-gap: 25px;
+  align-items: start;
+  max-width: 1300px;
+  margin: 0 auto;
+  position: relative;
+}
+
+#left-column {
+  position: sticky;
+  top: 25px;
+  align-self: start;
+  padding-left: 25px;
+}
+
+#global-head {
+  width: 100%;
+  text-align: left;
+  padding-top: 35px;
+  padding-left: 55px;
+  padding-right: 30px;
+  padding-bottom: 25px;
+  color: rgb(50, 50, 50);
+  background: #fff;
+}
+
+#global-head p {
+  font-size: 12px;
+  color: rgb(85, 85, 85);
+  line-height: 18px;
+  margin-bottom: 0;
+}
+
+#sidebar {
+  width: 100%;
+  background: #fff;
+  text-align: left;
+  font-size: 15px;
+  padding-top: 0;
+  padding-left: 55px;
+  padding-right: 30px;
+  padding-bottom: 25px;
+  margin: 0;
+}
+
 #main {
   padding-top: 25px;
   padding-right: 25px;
   padding-bottom: 10px;
-  padding-left: 25px;
+  padding-left: 0;
+  min-width: 0;
 }
 
 #main-in {
-  padding-left: var(--sidebar-total);
+  padding-left: 0;
 }
 
 #main p {
@@ -23,37 +71,6 @@
   padding-top: 30px;
 }
 
-#global-head {
-  position: fixed;
-  top: 0;
-  width: var(--sidebar-width);
-  text-align: left;
-  padding-top: 60px;
-  padding-left: 80px;
-  padding-right: 30px;
-  z-index: 100;
-  color: rgb(50, 50, 50);
-}
-
-#global-head p {
-  font-size: 12px;
-  color: rgb(85, 85, 85);
-  line-height: 18px;
-}
-
-#sidebar {
-  position: fixed;
-  top: 0;
-  width: var(--sidebar-width);
-  height: 100%;
-  margin: var(--sidebar-gap);
-  padding-top: 240px;
-  padding-left: 55px;
-  background: #fff;
-  text-align: left;
-  font-size: 15px;
-}
-
 #overlay {
   display: none;
   position: fixed;
@@ -66,74 +83,84 @@
   bottom: 0;
 }
 
+/* slightly narrower desktop */
 @media screen and (max-width: 1150px) {
-  #main {
+  .total {
+    grid-template-columns: 330px minmax(0, 1fr);
+    column-gap: 10px;
+  }
+
+  #left-column {
+    top: 10px;
     padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
   }
 
   #global-head {
-    padding-top: 40px;
-    padding-left: 60px;
-    padding-right: 30px;
+    padding-top: 30px;
+    padding-left: 45px;
+    padding-right: 25px;
   }
 
   #sidebar {
-    margin: 10px;
-    padding-top: 240px;
-    padding-left: 50px;
+    padding-left: 45px;
+    padding-right: 25px;
   }
 
-  :root {
-    --sidebar-gap: 10px;
-    --sidebar-total: calc(var(--sidebar-width) + (var(--sidebar-gap) * 2));
+  #main {
+    padding-top: 10px;
+    padding-right: 10px;
   }
 }
 
 @media screen and (max-width: 1050px) {
-  #main {
+  .total {
+    grid-template-columns: 310px minmax(0, 1fr);
+    column-gap: 0;
+  }
+
+  #left-column {
     padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
+    top: 0;
   }
 
   #global-head {
     padding-top: 20px;
-    padding-left: 40px;
+    padding-left: 35px;
     padding-right: 20px;
   }
 
   #sidebar {
-    margin: 0;
-    padding-top: 220px;
-    padding-left: 40px;
+    padding-left: 35px;
+    padding-right: 20px;
   }
 
-  :root {
-    --sidebar-gap: 0px;
-    --sidebar-total: calc(var(--sidebar-width) + (var(--sidebar-gap) * 2));
+  #main {
+    padding-top: 0;
+    padding-right: 0;
   }
 }
 
+/* mobile: return to slide-in sidebar */
 @media screen and (max-width: 900px) {
-  #main {
-    padding-top: 160px;
+  .total {
+    display: block;
+    max-width: 1300px;
   }
 
-  #main-in {
+  #left-column {
+    position: static;
     padding-left: 0;
   }
 
-  #main section {
-    padding: 25px 25px 25px 25px;
-  }
-
   #global-head {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     padding: 25px;
-    background: rgba(255, 255, 255);
+    background: rgba(255, 255, 255, 1);
     line-height: 10px;
+    z-index: 100;
   }
 
   #global-head p {
@@ -150,17 +177,31 @@
     margin: 0;
     padding-top: 100px;
     padding-left: 40px;
+    padding-right: 20px;
+    padding-bottom: 25px;
     background: #fff;
     color: #333;
     transition: .35s ease-in-out;
+    z-index: 300;
+  }
+
+  #main {
+    padding-top: 160px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 10px;
+  }
+
+  #main-in {
+    padding-left: 0;
+  }
+
+  #main section {
+    padding: 25px 25px 25px 25px;
   }
 
   #overlay {
     z-index: 200;
-  }
-
-  #sidebar {
-    z-index: 300;
   }
 }
 
